# Chandler-vs-Janices

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
Headers/: Bullet.h  Enemy.h  Game.h  GameMacros.h  Health.h  HighScore.h  MyQObjectModel.h  Player.h  Score.h
Sources/: Bullet.cpp  Enemy.cpp  Game.cpp  Health.cpp  HighScore.cpp  MyQObjectModel.cpp  Player.cpp  Score.cpp
